RESOLVED FIXED167369
Crash when setting custom scale factor.
https://bugs.webkit.org/show_bug.cgi?id=167369
Summary Crash when setting custom scale factor.
Per Arne Vollan
Reported 2017-01-24 03:46:47 PST
WebKit will crash if custom scale factor is set before initWithFrame is called.
Attachments
Patch (2.43 KB, patch)
2017-01-24 04:00 PST, Per Arne Vollan
no flags
Patch (6.60 KB, patch)
2017-01-25 04:20 PST, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-01-24 04:00:16 PST
Per Arne Vollan
Comment 2 2017-01-24 04:11:34 PST
Sam Weinig
Comment 3 2017-01-24 08:35:04 PST
Comment on attachment 299596 [details] Patch Can you add an API test for this?
Per Arne Vollan
Comment 4 2017-01-25 04:20:43 PST
Per Arne Vollan
Comment 5 2017-01-25 04:21:52 PST
(In reply to comment #3) > Comment on attachment 299596 [details] > Patch > > Can you add an API test for this? Thanks for reviewing! Updated patch.
WebKit Commit Bot
Comment 6 2017-01-26 02:10:26 PST
Comment on attachment 299688 [details] Patch Clearing flags on attachment: 299688 Committed r211207: <http://trac.webkit.org/changeset/211207>
WebKit Commit Bot
Comment 7 2017-01-26 02:10:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.