Crash when setting custom scale factor. https://bugs.webkit.org/show_bug.cgi?id=167369

Reviewed by Sam Weinig.

Source/WebKit/mac:

Add null pointer check.

* WebView/WebView.mm:
(-[WebView _setCustomBackingScaleFactor:]):

Source/WebKit/win:

Add null pointer check.

* WebView.cpp:
(WebView::setCustomBackingScaleFactor):

Tools:

Added API test.

* TestWebKitAPI/PlatformWin.cmake:
* TestWebKitAPI/Tests/WebKit/win/ScaleWebView.cpp: Added.
(TestWebKitAPI::WebKitCreateInstance):
(TestWebKitAPI::ScaleWebView::SetUp):
(TestWebKitAPI::ScaleWebView::TearDown):
(TestWebKitAPI::TEST_F):


Canonical link: https://commits.webkit.org/184490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211207 268f45cc-cd09-0410-ab3c-d52691b4dbfc